--- a/components/styles/card.module.scss
+++ b/components/styles/card.module.scss
@@ -94,3 +94,11 @@
   width: 100%;
   height: 100%;
 }
+
+.back_btn {
+  position: fixed;
+  z-index: 999;
+  top: 10px;
+  left: 10px;
+  border: none;
+}
