--- a/styles/pages/home.module.scss
+++ b/styles/pages/home.module.scss
@@ -67,3 +67,160 @@
   display: flex;
   justify-content: space-evenly;
 }
+
+.membership {
+  position: relative;
+  min-height: 100vh;
+  width: 100vw;
+}
+
+.background_membership {
+  z-index: 4;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+}
+
+.membership_intro {
+  @extend %page_padding;
+  z-index: 5;
+  position: sticky;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+
+  h1 {
+    font-size: $xxlg_font;
+  }
+  p {
+    max-width: 1000px;
+    margin: 50px 0;
+  }
+}
+
+.membership_content {
+  @extend %page_padding;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 6;
+  width: 100vw;
+  min-height: 100vh;
+  background-color: $secondary_color;
+  overflow-x: auto;
+
+  h1 {
+    margin: 100px 0 0 0;
+    font-size: $xxlg_font;
+  }
+
+  h2 {
+    margin: 75px 0;
+    text-decoration: underline;
+  }
+
+  p {
+    font-size: $sm_font;
+    color: crimson;
+    text-align: start;
+    width: 80%;
+  }
+}
+
+.table_membership, .table_pilates {
+  width: 80%;
+  min-width: 800px;
+
+  td, th {
+    height: 50px;
+    text-align: center;
+    border: 1px solid $sub_color;
+  }
+}
+
+.contact {
+  position: relative;
+  min-height: 100vh;
+  width: 100vw;
+}
+
+.background_pilates {
+  z-index: 7;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+}
+
+.contact_intro {
+  @extend %page_padding;
+  z-index: 8;
+  position: sticky;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+
+  h1 {
+    font-size: $xxlg_font;
+  }
+
+  p {
+    max-width: 1000px;
+    margin: 50px 0;
+  }
+}
+
+.contact_content {
+  @extend %page_padding;
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  z-index: 9;
+  width: 100vw;
+  min-height: 100vh;
+  background-color: $primary_color;
+  overflow-x: auto;
+}
+
+.location {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+
+  .store_info {
+    width: 100%;
+    height: 40%;
+
+    strong {color: $logo_color;}
+  }
+  .map {
+    width: 100%;
+    height: 60%;
+  }
+}
+
+.contact_form {
+  width: 50%;
+  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+
+  h2 {
+    // color: $logo_color;
+    text-align: center;
+  }
+
+  input, textarea, button {
+    margin: 20px 0;
+  } 
+
+  textarea {
+    height: 200px;
+    max-height: 350px;
+    resize: vertical;
+  }
+}
