--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,13 +10,13 @@
   src: url('/fonts/BarlowCondensed-Regular.ttf');
 }
 
-// ::-webkit-scrollbar {
-//   width: 10px;
-// }
+::-webkit-scrollbar {
+  width: 10px;
+}
 
-// ::-webkit-scrollbar-thumb {
-//   background-color: $secondary_color;
-// }
+::-webkit-scrollbar-thumb {
+  background-color: $secondary_color;
+}
 
 html {
   scroll-behavior: smooth;
