--- a/components/styles/card.module.scss
+++ b/components/styles/card.module.scss
@@ -6,6 +6,9 @@
   height: 400px;
   margin: 30px;
   background-color: $secondary_color;
+  @include breakpoint(mobile) {
+    margin: 30px 0;
+  }
 
   h3 {
     position: absolute;
@@ -98,7 +101,8 @@
 .back_btn {
   position: fixed;
   z-index: 999;
-  top: 10px;
+  bottom: 10px;
   left: 10px;
   border: none;
+  min-width: 0;
 }
