--- a/components/styles/nav.module.scss
+++ b/components/styles/nav.module.scss
@@ -14,7 +14,10 @@
   align-items: flex-start;
   flex-direction: column;
   justify-content: flex-end;
-  transform-origin: right;
+
+  @include breakpoint(smallScreen) {
+    display: none;
+  }
 }
 
 .logo {
@@ -23,3 +26,47 @@
   color: $logo_color;
 }
 
+// Mobile
+.nav_mobile {
+  display: none;
+  
+  @include breakpoint(smallScreen) {
+    display: block;
+  }
+
+  img {
+    position: fixed;
+    cursor: pointer;
+    z-index: 999;
+    width: 30px;
+    height: 30px;
+    top: 20px;
+    left: 20px;
+  }
+}
+
+.routers_mobile {
+  z-index: 999;
+  position: fixed;
+  top: 50px;
+  left: 20px;
+  overflow: hidden;
+}
+
+.logo_mobile {
+  position: fixed;
+  z-index: 999;
+  margin: 0 10px 0 0;
+  top: 0;
+  right: 0;
+  font-family: 'Teko';
+  font-size: $xxlg_font;
+  color: $logo_color;
+}
+
+.route_mobile {
+  border: none;
+  background-color: $logo_color;
+  margin: 5px 0;
+  padding: 5px;
+}
