--- a/styles/lib/breakpoints.scss
+++ b/styles/lib/breakpoints.scss
@@ -1,11 +1,14 @@
 @mixin breakpoint($point) {
   @if $point == desktop {
-    @media (min-width: 1025px) { @content ; }
+    @media (min-width: 1025px) { @content; }
  }
    @else if $point == tablet {
     @media (min-width: 768px) and (max-width: 1024px) { @content ; }
  }
- @else if $point == mobile {
-    @media (max-width: 767px)  { @content ; }
+   @else if $point == mobile {
+    @media (max-width: 767px)  { @content; }
  }
+   @else if $point == smallScreen {
+      @media (max-width: 1024px) { @content; }
+   }
 }
