--- a/styles/pages/home.module.scss
+++ b/styles/pages/home.module.scss
@@ -14,6 +14,11 @@
   margin: auto;
   width: 35vw;
   height: 100vh;
+
+  @include breakpoint(mobile) {
+    width: 50vw;
+    margin: 0;
+  }
 }
 
 .main_photo {
@@ -23,6 +28,9 @@
   height: 100vh;
   display: flex;
   justify-content: space-between;
+  @include breakpoint(mobile) {
+    justify-content: flex-end;
+  }
 }
 
 .main_text {
@@ -33,12 +41,30 @@
   left: 50px;
   width: 100vw;
   line-height: 1.5em;
+
+  @include breakpoint(smallScreen) {
+    font-size: $xxlg_font;
+  }
 }
 
-.photo {
+%photo {
   width: 35%;
   height: 100%;
   position: relative;
+}
+
+.photo_right, .photo_left { @extend %photo; }
+
+.photo_left {
+  @include breakpoint(mobile) {
+    display: none;
+  }
+}
+
+.photo_right {
+  @include breakpoint(mobile) {
+    width: 50%;
+  }
 }
 
 .facility {
@@ -54,10 +80,16 @@
 
   h1 {
     font-size: $xxlg_font;
+    @include breakpoint(smallScreen) {
+      font-size: $xlg_font;
+    }
   }
   p {
     margin: 50px;
     max-width: 800px;
+    @include breakpoint(smallScreen) {
+      margin: 20px 0;
+    }
   }
 }
 
@@ -66,6 +98,7 @@
   width: 100%;
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .membership {
@@ -86,12 +119,16 @@
   @extend %page_padding;
   z-index: 5;
   position: sticky;
+  background-color: rgba(0, 0, 0, 0.5);
   top: 0;
   width: 100vw;
   height: 100vh;
 
   h1 {
     font-size: $xxlg_font;
+    @include breakpoint(smallScreen) {
+      font-size: $xlg_font;
+    }
   }
   p {
     max-width: 1000px;
@@ -106,14 +143,21 @@
   flex-direction: column;
   align-items: center;
   z-index: 6;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   background-color: $secondary_color;
   overflow-x: auto;
 
+  @include breakpoint(smallScreen) {
+    align-items: flex-start;
+  }
+
   h1 {
     margin: 100px 0 0 0;
     font-size: $xxlg_font;
+    @include breakpoint(smallScreen) {
+      font-size: $xlg_font;
+    }
   }
 
   h2 {
@@ -125,13 +169,16 @@
     font-size: $sm_font;
     color: crimson;
     text-align: start;
-    width: 80%;
+    min-width: 1000px;
+    max-width: 800px;
+    width: 100%;
   }
 }
 
 .table_membership, .table_pilates {
-  width: 80%;
-  min-width: 800px;
+  width: 100%;
+  min-width: 1000px;
+  max-width: 800px;
 
   td, th {
     height: 50px;
@@ -161,14 +208,18 @@
   top: 0;
   width: 100vw;
   height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
 
   h1 {
     font-size: $xxlg_font;
+    @include breakpoint(smallScreen) {
+      font-size: $xlg_font;
+    }
   }
 
   p {
-    max-width: 1000px;
     margin: 50px 0;
+    max-width: 1000px;
   }
 }
 
@@ -177,6 +228,7 @@
   position: relative;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   z-index: 9;
   width: 100vw;
   min-height: 100vh;
@@ -188,6 +240,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  margin: 20px;
+  min-width: 300px;
+  min-height: 500px;
 
   .store_info {
     width: 100%;
@@ -203,7 +258,9 @@
 
 .contact_form {
   width: 50%;
+  min-width: 300px;
   max-width: 500px;
+  margin: 20px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -216,11 +273,19 @@
 
   input, textarea, button {
     margin: 20px 0;
+    min-width: 200px;
   } 
 
   textarea {
     height: 200px;
     max-height: 350px;
     resize: vertical;
+  }
+
+  button {
+    border-color: $sub_color;
+    color: $sub_color;
+
+    &:hover {border-color: $logo_color;}
   }
 }
