--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,15 +1,5 @@
 @import './lib/theme.scss';
 
-@font-face{
-  font-family: 'Teko';
-  src: url('/fonts/Teko-Regular.ttf')
-}
-
-@font-face {
-  font-family: 'BarlowCondesnsed';
-  src: url('/fonts/BarlowCondensed-Regular.ttf');
-}
-
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -23,16 +13,7 @@ html {
 }
 
 body {
-  font-family: 'BarlowCondensed';
-  background-color: $primary_color;
-  color: $sub_color;
-  width: 100%;
-  height: 100%;
   overflow-x: hidden;
-}
-
-p {
-  line-height: 2em;
 }
 
 a {
@@ -42,31 +23,31 @@ a {
 
   &:hover {
     transition: 0.3s;
-    color: $logo_color;
+    color: $primary_color;
   }
 }
 
 button {
   background-color: transparent;
-  border: 1px solid $logo_color;
-  color: $logo_color;
+  border: 1px solid $font_color;
+  color: $font_color;
   cursor: pointer;
   min-width: 150px;
   padding: 5px;
 
   &:hover {
     transition: 0.3s;
-    background-color: $logo_color;
-    color: $sub_color;
+    background-color: $primary_color;
+    color: white;
   }
 }
 
 input, textarea, select {
-  outline-color: $secondary_color;
-  background-color: $sub_color;
-  border: none;
+  outline-color: $font_color;
+  background-color: transparent;
+  border: 1px solid $font_color;
   padding: 5px;
-  color: $logo_color;
+  color: $font_color;
 
   &::placeholder {
     text-align: center;
