--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,7 +29,8 @@ a {
 
 button {
   background-color: transparent;
-  border: 1px solid $font_color;
+  border: 2px solid $font_color;
+  border-radius: 5px;
   color: $font_color;
   cursor: pointer;
   min-width: 150px;
@@ -38,6 +39,7 @@ button {
   &:hover {
     transition: 0.3s;
     background-color: $primary_color;
+    border-color: $primary_color;
     color: white;
   }
 }
