--- a/components/styles/footer.module.scss
+++ b/components/styles/footer.module.scss
@@ -6,6 +6,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    & > p {
+        font-size: $sm_font;
+    }
 }
 
 .copyright {
