--- a/styles/lib/breakpoints.scss
+++ b/styles/lib/breakpoints.scss
@@ -1,14 +1,14 @@
 @mixin breakpoint($point) {
-  @if $point == desktop {
-    @media (min-width: 1025px) { @content; }
+   @if $point == PC {
+     @media (min-width: 1300px) { @content; }
+  }
+    @else if $point == tablet {
+     @media (min-width: 768px) and (max-width: 1024px) { @content ; }
+  }
+    @else if $point == mobile {
+     @media (max-width: 767px)  { @content; }
+  }
+    @else if $point == smallPC {
+       @media (min-width: 1025px) and (max-width: 1300px) { @content; }
+    }
  }
-   @else if $point == tablet {
-    @media (min-width: 768px) and (max-width: 1024px) { @content ; }
- }
-   @else if $point == mobile {
-    @media (max-width: 767px)  { @content; }
- }
-   @else if $point == smallScreen {
-      @media (max-width: 1024px) { @content; }
-   }
-}
