breakpoint updated again

--- a/styles/lib/breakpoints.scss
+++ b/styles/lib/breakpoints.scss
@@ -2,13 +2,20 @@
    @if $point == PC {
      @media (min-width: 1300px) { @content; }
   }
+    @else if $point == smallScreen {
+       @media (max-width: 1300px) { @content; }
+ }
+    @else if $point == smallPC {
+       @media (min-width: 1025px) and (max-width: 1300px) { @content; }
+ }
+    @else if $point == tablet_mobile {
+       @media (max-width: 1024px) { @content ; }
+ }
     @else if $point == tablet {
      @media (min-width: 768px) and (max-width: 1024px) { @content ; }
   }
     @else if $point == mobile {
      @media (max-width: 767px)  { @content; }
   }
-    @else if $point == smallPC {
-       @media (min-width: 1025px) and (max-width: 1300px) { @content; }
-    }
+  
  }
