--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,7 +5,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: $secondary_color;
+  background-color: $primary_color;
 }
 
 html {
@@ -14,6 +14,7 @@ html {
 
 body {
   overflow-x: hidden;
+  color: $font_color;
 }
 
 a {
@@ -62,6 +63,7 @@ input, textarea, select {
 }
 
 li {
+  color: inherit;
   list-style: none;
 }
 
