--- a/styles/lib/extension.scss
+++ b/styles/lib/extension.scss
@@ -1,7 +1,12 @@
 @import "./breakpoints.scss";
 
-%page_padding {
-  padding: 100px;
+%page_container {
+  padding: 200px 100px 100px 100px;
+  min-height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   @include breakpoint(mobile) {
     padding: 50px;
