--- a/styles/lib/variables.scss
+++ b/styles/lib/variables.scss
@@ -1,7 +1,7 @@
 $font_color: #373D3F;
 $primary_color: #2f2f2f;
 $secondary_color: #1e2232;
-$sub_color: #f3eee8;
+$background_color: #f3eee8;
 $logo_color: crimson;
 
 $sm_font: 12px;
