--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,12 +1,12 @@
 @import './lib/theme.scss';
 
-::-webkit-scrollbar {
-  width: 10px;
-}
+// ::-webkit-scrollbar {
+//   width: 10px;
+// }
 
-::-webkit-scrollbar-thumb {
-  background-color: $primary_color;
-}
+// ::-webkit-scrollbar-thumb {
+//   background-color: $primary_color;
+// }
 
 html {
   scroll-behavior: smooth;
