--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,12 +1,26 @@
 @import './lib/theme.scss';
 
-// ::-webkit-scrollbar {
-//   width: 10px;
-// }
+// logo font
+@font-face {
+  font-family: 'ShadowsIntoLight';
+  src: url('/fonts/ShadowsIntoLight-Regular.ttf');
+}
 
-// ::-webkit-scrollbar-thumb {
-//   background-color: $primary_color;
-// }
+// title font 
+@font-face {
+  font-family: 'BebasNeue';
+  src: url('/fonts/BebasNeue-Regular.ttf');
+}
+
+// text font 
+@font-face {
+  font-family: 'OpenSans';
+  src: url('/fonts/OpenSans-Regular.ttf');
+}
+
+.highlight {
+  color: $primary_color;
+}
 
 html {
   scroll-behavior: smooth;
@@ -15,13 +29,15 @@ html {
 body {
   overflow-x: hidden;
   color: $font_color;
+  font-family: 'OpenSans';
 }
 
 a {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
-
+  font-weight: bold;
+    
   &:hover {
     transition: 0.3s;
     color: $primary_color;
