--- a/styles/lib/extension.scss
+++ b/styles/lib/extension.scss
@@ -14,5 +14,8 @@
 }
 
 %title_style {
-
+  color: $secondary_color;
+  font-family: 'BebasNeue';
+  font-size: $huge_font;
+  font-weight: lighter;
 }
