--- a/styles/lib/variables.scss
+++ b/styles/lib/variables.scss
@@ -1,7 +1,7 @@
 $font_color: #373D3F;
-$primary_color: crimson;
-$secondary_color: #1e2232;
-$background_color: #f3eee8;
+$primary_color: #2D68C4;
+$secondary_color: rgb(118, 118, 118);
+$background_color: rgb(255, 255, 255);
 
 $sm_font: 12px;
 $lg_font: 24px;
