--- a/components/styles/card.module.scss
+++ b/components/styles/card.module.scss
@@ -1,5 +1,72 @@
 @import '../../styles/lib/theme.scss';
 
 .card {
-    
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    border-radius: 10px;
+
+    &:hover .window_top, &:hover .window_bottom {
+        transition: 1s;
+        background-color: $primary_color;
+    }
+
+    &:hover .info_container {
+        transition: 0.5s;
+        opacity: 1;
+    }
+}
+
+.img_container {
+    position: relative;
+    width: 500px;
+    height: 250px;
+}
+
+.info_container {
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.44);
+    backdrop-filter: blur(10px);
+
+    & > h2 {
+        margin-bottom: 20px;
+    }
+}
+
+
+.window_top {
+    width: 500px;
+    height: 15px;
+    background-color: $secondary_color;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    display: flex;
+    align-items: center;
+
+    & > div {
+        border-radius: 50%;
+        width: 5px;
+        height: 5px;
+        background-color: #fff;
+        margin-left: 10px;
+    }
+}
+
+.window_bottom {
+    width: 500px;
+    height: 15px;
+    background-color: $secondary_color;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
