--- a/styles/pages/[template].module.scss
+++ b/styles/pages/[template].module.scss
@@ -4,10 +4,10 @@
     position: relative;
     display: flex;
     justify-content: center;
-    align-items: center;
+    // align-items: center;
     width: 100vw;
     height: 100vh;
-    overflow-y: hidden;
+    overflow-y: auto;
 }
 
 .setting_btn {
@@ -22,6 +22,15 @@
     left: 50px;
     width: 50px;
     height: 50px;
+
+    
+    @include breakpoint(mobile) {
+        padding: 7px;
+        width: 40px;
+        height: 40px;
+        left: 25px;
+        bottom: 25px;
+    }
 
     &:hover {
         transition: 0.3s;
@@ -44,6 +53,13 @@
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.395);
     backdrop-filter: blur(20px);
+
+    @include breakpoint(mobile) {
+        width: 80%;
+        height: auto;
+        left: 25px;
+        bottom: 25px;
+    }
 
     & > p {
         margin: 20px 0;
@@ -115,4 +131,8 @@
         background-color: $primary_color;
         border-radius: 50%;
     }
+}
+
+.alert {
+    color: crimson;
 }
