--- a/components/styles/card.module.scss
+++ b/components/styles/card.module.scss
@@ -8,6 +8,10 @@
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     border-radius: 10px;
 
+    @include breakpoint(mobile) {
+        border-radius: 5px;
+    }
+
     &:hover .window_top, &:hover .window_bottom {
         transition: 1s;
         background-color: $primary_color;
@@ -21,11 +25,17 @@
 
 .img_container {
     position: relative;
-    width: 500px;
-    height: 250px;
+    width: 25vw;
+    height: 14.5vw;
+
+    @include breakpoint(tablet_mobile) {
+        width: 30vw;
+        height: 60vw;
+    }
 }
 
 .info_container {
+    cursor: pointer;
     opacity: 0;
     width: 100%;
     height: 100%;
@@ -41,18 +51,28 @@
 
     & > h2 {
         margin-bottom: 20px;
+        @include breakpoint(tablet_mobile) {
+            font-size: inherit;
+        }
     }
 }
 
 
 .window_top {
-    width: 500px;
+    width: 25vw;
     height: 15px;
     background-color: $secondary_color;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     display: flex;
     align-items: center;
+
+    @include breakpoint(tablet_mobile) {
+        width: 30vw;
+        height: 10px;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+    }
 
     & > div {
         border-radius: 50%;
@@ -64,9 +84,16 @@
 }
 
 .window_bottom {
-    width: 500px;
+    width: 25vw;
     height: 15px;
     background-color: $secondary_color;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+
+    @include breakpoint(tablet_mobile) {
+        width: 30vw;
+        height: 10px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+    }
 }
