--- a/styles/pages/[template].module.scss
+++ b/styles/pages/[template].module.scss
@@ -48,10 +48,10 @@
     bottom: 50px;
     left: 50px;
     width: 500px;
-    height: 300px;
+    height: auto;
     box-shadow: 0 7px 14px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.395);
+    background-color: rgba(255, 255, 255, 0.509);
     backdrop-filter: blur(20px);
 
     @include breakpoint(mobile) {
