--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,8 +14,8 @@
 
 // text font 
 @font-face {
-  font-family: 'OpenSans';
-  src: url('/fonts/OpenSans-Regular.ttf');
+  font-family: 'Roboto';
+  src: url('/fonts/Roboto-Regular.ttf');
 }
 
 .highlight {
@@ -29,7 +29,7 @@ html {
 body {
   overflow-x: hidden;
   color: $font_color;
-  font-family: 'OpenSans';
+  font-family: 'Roboto';
 }
 
 a {
@@ -93,4 +93,8 @@ li {
   width: 100%;
   height: 100%;
   position: relative;
+}
+
+p {
+  line-height: 1.5em;
 }
