--- a/styles/pages/about.module.scss
+++ b/styles/pages/about.module.scss
@@ -1,6 +1,15 @@
 @import '../lib/theme.scss';
 
-$component_margin: 150px;
+$component_margin: 200px;
+
+.title {
+    @extend %title_style;
+}
+
+.subtitle {
+    @extend %title_style;
+    font-size: $xlg_font;
+}
 
 .container {
     @extend %page_container;
@@ -24,10 +33,6 @@ $component_margin: 150px;
     display: flex;
     flex-direction: column;
     max-width: 500px;
-    
-    & > h1 {
-        @extend %title_style;
-    }
 
     & > p {
         margin-top: 50px;
@@ -41,7 +46,36 @@ $component_margin: 150px;
     & > h1 {
         @extend %title_style;
     }
+}
 
+.intro {
+    & > p {
+        margin-top: 50px;
+    }
+}
+
+.inefficiency {
+    display: flex;
+    gap: 20px;
+    margin-top: 50px;
+
+    & > div {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        // justify-content: space-between;
+
+        & > h3 {
+            font-size: $lg_font;
+        }
+        
+        & > p {
+            margin-top: 20px;
+        }
+    }
+}
+
+.efficiency {
     & > p {
         margin-top: 50px;
     }
@@ -49,8 +83,10 @@ $component_margin: 150px;
 
 .efficient_components {
     margin-top: 50px;
+    width: 1025px;
     display: grid;
     grid-template-columns: auto auto;
+    justify-content: space-between;
     gap: 100px;
 }
 
@@ -58,12 +94,12 @@ $component_margin: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 500px;
+    width: 450px;
     padding: 50px 25px;
     box-shadow: 0 7px 14px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 
     & > h2 {
-        margin: 20px;
+        margin: 30px;
     }
 }
 
@@ -73,12 +109,77 @@ $component_margin: 150px;
     flex-direction: column;
     align-items: center;
 
-    & > h1 {
-        @extend %title_style;
-    }
-
     & > a {
         align-self: flex-end;
+    }
+
+        
+    .templates_container {
+        display: flex;
+        width: 100%;
+        gap: 50px;
+
+        .img_container {
+            position: relative;
+            height: 32vw;
+            width: 100%;
+        }
+    }
+
+    .template_desktop, .template_mobile {
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0 7px 14px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+        border-radius: 15px;
+    }
+
+    .template_desktop {
+        width: 60vw;
+    }
+
+    .template_mobile {
+        width: 15.8vw;
+    }
+
+    .desktop_top, .desktop_bottom, .mobile_top, .mobile_bottom {
+        background-color: $secondary_color;
+        width: 100%;
+        height: 1.3vw;
+    }
+
+    .desktop_top, .mobile_top {
+        border-top-left-radius: 0.7vw;
+        border-top-right-radius: 0.7vw;
+    }
+
+    .desktop_bottom, .mobile_bottom {
+        border-bottom-left-radius: 0.7vw;
+        border-bottom-right-radius: 0.7vw;
+    }
+
+    .desktop_top {
+        display: flex;
+        align-items: center;
+        & > div {
+            border-radius: 50%;
+            width: 0.5vw;
+            height: 0.5vw;
+            background-color: #fff;
+            margin-left: 0.5vw;
+        }
+    }
+
+    .mobile_bottom {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        & > div {
+            border-radius: 50%;
+            width: 0.5vw;
+            height: 0.5vw;
+            background-color: #fff;
+        }
     }
 }
 
@@ -87,75 +188,85 @@ $component_margin: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
+
     & > h2 {
         margin: 0 50px;
     }
 }
 
-.templates_container {
+.templates_comparison_container {
     display: flex;
+    justify-content: space-between;
     width: 100%;
-    gap: 50px;
+    gap: 25px;
 
     .img_container {
         position: relative;
-        height: 600px;
+        height: 260px;
         width: 100%;
     }
-}
 
-.template_desktop, .template_mobile {
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0 7px 14px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    border-radius: 15px;
-}
-
-.template_desktop {
-    width: 1150px;
-}
-
-.template_mobile {
-    width: 300px;
-}
-
-.desktop_top, .desktop_bottom, .mobile_top, .mobile_bottom {
-    background-color: $secondary_color;
-    width: 100%;
-    height: 25px;
-}
-
-.desktop_top, .mobile_top {
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-}
-
-.desktop_bottom, .mobile_bottom {
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-}
-
-.desktop_top {
-    display: flex;
-    align-items: center;
-    & > div {
-        border-radius: 50%;
-        width: 10px;
-        height: 10px;
-        background-color: #fff;
-        margin-left: 10px;
+    .template_desktop {
+        cursor: pointer;
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0 7px 14px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+        border-radius: 15px;
+    
+        &:hover > .desktop_top, &:hover > .desktop_bottom {
+            background-color: $primary_color;
+        }
+    }
+    
+    .template_desktop {
+        width: 500px;
+    }
+    
+    .desktop_top, .desktop_bottom {
+        background-color: $secondary_color;
+        width: 100%;
+        height: 15px;
+    }
+    
+    .desktop_top {
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+    }
+    
+    .desktop_bottom {
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+    }
+    
+    .desktop_top {
+        display: flex;
+        align-items: center;
+        & > div {
+            border-radius: 50%;
+            width: 5px;
+            height: 5px;
+            background-color: #fff;
+            margin-left: 5px;
+        }
     }
 }
 
-.mobile_bottom {
-    display: flex;
-    align-items: center;
-    justify-content: center;
 
-    & > div {
-        border-radius: 50%;
-        width: 10px;
-        height: 10px;
-        background-color: #fff;
+
+.custom_design, .scalable_design, .and_more {
+    width: 1025px;
+    margin-top: $component_margin;
+
+    & > p {
+        margin-top: 50px;
     }
+}
+
+.custom_design, .and_more {
+    align-self: flex-start;
+}
+
+.scalable_design {
+    align-self: flex-end;
 }
