--- a/components/styles/card.module.scss
+++ b/components/styles/card.module.scss
@@ -8,8 +8,8 @@
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     border-radius: 10px;
 
-    @include breakpoint(mobile) {
-        border-radius: 5px;
+    @include breakpoint(tablet_mobile) {
+        border-radius: 1.3vw;
     }
 
     &:hover .window_top, &:hover .window_bottom {
@@ -69,9 +69,9 @@
 
     @include breakpoint(tablet_mobile) {
         width: 30vw;
-        height: 10px;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
+        height: 2vw;
+        border-top-left-radius: 1.3vw;
+        border-top-right-radius: 1.3vw;
     }
 
     & > div {
@@ -80,6 +80,10 @@
         height: 5px;
         background-color: #fff;
         margin-left: 10px;
+
+        @include breakpoint(tablet_mobile) {
+            display: none;
+        }
     }
 }
 
@@ -89,11 +93,26 @@
     background-color: $secondary_color;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     @include breakpoint(tablet_mobile) {
         width: 30vw;
-        height: 10px;
-        border-bottom-left-radius: 5px;
-        border-bottom-right-radius: 5px;
+        height: 2vw;
+        border-bottom-left-radius: 1.3vw;
+        border-bottom-right-radius: 1.3vw;
+    }
+
+    & > div {
+        display: none;
+        background-color: #fff;
+        width: 1vw;
+        height: 1vw;
+        border-radius: 50%;
+
+        @include breakpoint(tablet_mobile) {
+            display: block;
+        }
     }
 }
