--- a/components/styles/slideshow.module.scss
+++ b/components/styles/slideshow.module.scss
@@ -1,69 +1,84 @@
 @import '../../styles/lib/theme.scss';
 
-.container {
+.container {  
+    width: 1025px;
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+
+    @include breakpoint(tablet) {
+        width: 85vw;
+    }
+
+    @include breakpoint(mobile) {
+        width: 80vw;
+    }
 }
 
 .thumbnail_wrapper {
+    width: 100%;
     position: relative;
-    width: 1025px;
     height: 576px;
 
-    @include breakpoint(tablet_mobile) {
-        width: 80vw;
+    @include breakpoint(tablet) {
+        height: 47vw;
+    }
+
+    @include breakpoint(mobile) {
         height: 160vw;
     }
 }
 
 .thumbnail {
     position: absolute;
-    width: 1025px;
+    width: 100%;
     height: 576px;
     top: 0%;
     left: 0%;
 
-    @include breakpoint(tablet_mobile) {
-        width: 80vw;
+    @include breakpoint(tablet) {
+        height: 47vw;
+    }
+
+    @include breakpoint(mobile) {
         height: 160vw;
     }
 }
 
 .window_top {
-    width: 1025px;
-    height: 25px;
+    width: 100%;
+    height: 20px;
     background-color: $secondary_color;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     display: flex;
     align-items: center;
 
-    @include breakpoint(tablet_mobile) {
+    @include breakpoint(mobile) {
         width: 80vw;
         height: 15px;
     }
 
     & > div {
         border-radius: 50%;
-        width: 10px;
-        height: 10px;
+        width: 7px;
+        height: 7px;
         background-color: #fff;
         margin-left: 10px;
     }
 }
 
 .window_bottom {
-    width: 1025px;
-    height: 25px;
+    width: 100%;
+    height: 20px;
     background-color: $secondary_color;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     
-    @include breakpoint(tablet_mobile) {
+    @include breakpoint(mobile) {
         width: 80vw;
         height: 15px;
     }
