--- a/styles/pages/about.module.scss
+++ b/styles/pages/about.module.scss
@@ -21,18 +21,31 @@ $component_margin: 200px;
     justify-content: center;
     align-items: center;
     gap: 50px;
+
+    @include breakpoint(mobile) {
+        flex-direction: column;
+    }
 }
 
 .profile_container {
     position: relative;
     width: 500px;
     height: 500px;
+
+    @include breakpoint(mobile) {
+        width: 250px;
+        height: 250px;
+    }
 }
 
 .about_me {
     display: flex;
     flex-direction: column;
     max-width: 500px;
+
+    @include breakpoint(tablet_mobile) {
+        flex: 1;
+    }
 
     & > p {
         margin-top: 50px;
@@ -42,6 +55,10 @@ $component_margin: 200px;
 .intro, .efficiency {
     margin-top: $component_margin;
     width: 1025px;
+
+    @include breakpoint(tablet_mobile) {
+        width: 100%
+    }
 
     & > h1 {
         @extend %title_style;
@@ -59,11 +76,19 @@ $component_margin: 200px;
     gap: 20px;
     margin-top: 50px;
 
+    @include breakpoint(mobile) {
+        flex-direction: column;
+    }
+
     & > div {
         flex: 1;
         display: flex;
         flex-direction: column;
-        // justify-content: space-between;
+
+        @include breakpoint(mobile) {
+            flex: none;
+            margin-top: 50px;
+        }
 
         & > h3 {
             font-size: $lg_font;
@@ -85,9 +110,18 @@ $component_margin: 200px;
     margin-top: 50px;
     width: 1025px;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr 1fr;
     justify-content: space-between;
     gap: 100px;
+
+    @include breakpoint(tablet_mobile) {
+        gap: 50px;
+        width: 100%
+    }
+
+    @include breakpoint(mobile) {
+        grid-template-columns: 1fr;
+    }
 }
 
 .component {
@@ -97,6 +131,11 @@ $component_margin: 200px;
     width: 450px;
     padding: 50px 25px;
     box-shadow: 0 7px 14px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+
+    @include breakpoint(tablet_mobile) {
+        width: auto;
+    }
+
 
     & > h2 {
         margin: 30px;
@@ -116,13 +155,23 @@ $component_margin: 200px;
         
     .templates_container {
         display: flex;
+        justify-content: space-around;
         width: 100%;
         gap: 50px;
+
+        @include breakpoint(mobile) {
+            flex-direction: column-reverse;
+            align-items: center;
+        }
 
         .img_container {
             position: relative;
             height: 32vw;
             width: 100%;
+
+            @include breakpoint(mobile) {
+                width: 80vw;
+            }
         }
     }
 
@@ -135,26 +184,56 @@ $component_margin: 200px;
 
     .template_desktop {
         width: 60vw;
+
+        @include breakpoint(mobile) {
+            width: 80vw;
+
+            & > .img_container {
+                height: 45vw;
+            }
+        }
     }
 
     .template_mobile {
         width: 15.8vw;
+
+        @include breakpoint(mobile) {
+            width: 80vw;
+
+            & > .img_container {
+                height: 160vw;
+            }
+        }
     }
 
     .desktop_top, .desktop_bottom, .mobile_top, .mobile_bottom {
         background-color: $secondary_color;
         width: 100%;
         height: 1.3vw;
+
+        @include breakpoint(mobile) {
+            height: 2.5vw;
+        }
     }
 
     .desktop_top, .mobile_top {
         border-top-left-radius: 0.7vw;
         border-top-right-radius: 0.7vw;
+
+        @include breakpoint(mobile) {
+            border-top-left-radius: 1.4vw;
+            border-top-right-radius: 1.4vw;
+        }
     }
 
     .desktop_bottom, .mobile_bottom {
         border-bottom-left-radius: 0.7vw;
         border-bottom-right-radius: 0.7vw;
+
+        @include breakpoint(mobile) {
+            border-bottom-left-radius: 1.4vw;
+            border-bottom-right-radius: 1.4vw;
+        }
     }
 
     .desktop_top {
@@ -166,6 +245,12 @@ $component_margin: 200px;
             height: 0.5vw;
             background-color: #fff;
             margin-left: 0.5vw;
+
+            @include breakpoint(mobile) {
+                width: 1vw;
+                height: 1vw;
+                margin-left: 1vw;
+            }
         }
     }
 
@@ -179,6 +264,11 @@ $component_margin: 200px;
             width: 0.5vw;
             height: 0.5vw;
             background-color: #fff;
+
+            @include breakpoint(mobile) {
+                width: 1vw;
+                height: 1vw;
+            }
         }
     }
 }
@@ -188,22 +278,47 @@ $component_margin: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
+    
+    @include breakpoint(tablet_mobile) {
+        margin: 50px 0;
+        width: 100%;
+        justify-content: space-around;
+
+        & > img {
+            width: 35px;
+            height: 35px;
+        }
+    }
+
 
     & > h2 {
         margin: 0 50px;
+
+        @include breakpoint(tablet_mobile) {
+            margin: 0;
+        }
     }
 }
 
 .templates_comparison_container {
     display: flex;
     justify-content: space-between;
-    width: 100%;
     gap: 25px;
+
+    @include breakpoint (tablet_mobile) {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
 
     .img_container {
         position: relative;
+        width: 100%; 
         height: 260px;
-        width: 100%;
+
+        @include breakpoint(tablet_mobile) {
+            height: 45vw;
+        }
     }
 
     .template_desktop {
@@ -220,13 +335,22 @@ $component_margin: 200px;
     }
     
     .template_desktop {
-        width: 500px;
+        width: 450px;
+
+        @include breakpoint(tablet_mobile) {
+            width: 80vw;
+        }
+    
     }
     
     .desktop_top, .desktop_bottom {
         background-color: $secondary_color;
         width: 100%;
         height: 15px;
+
+        @include breakpoint(tablet_mobile) {
+            height: 2vw;
+        }
     }
     
     .desktop_top {
@@ -248,6 +372,12 @@ $component_margin: 200px;
             height: 5px;
             background-color: #fff;
             margin-left: 5px;
+
+            @include breakpoint(tablet_mobile) {
+                margin-left: 1vw;
+                width: 1vw;
+                height: 1vw;
+            }
         }
     }
 }
@@ -258,6 +388,10 @@ $component_margin: 200px;
     width: 1025px;
     margin-top: $component_margin;
 
+    @include breakpoint(tablet_mobile) {
+        width: 100%
+    }
+
     & > p {
         margin-top: 50px;
     }
@@ -265,8 +399,16 @@ $component_margin: 200px;
 
 .custom_design, .and_more {
     align-self: flex-start;
+
+    @include breakpoint(smallScreen) {
+        align-self: auto;
+    }
 }
 
 .scalable_design {
     align-self: flex-end;
+
+      @include breakpoint(smallScreen) {
+        align-self: auto;
+    }
 }
