--- a/styles/pages/home.module.scss
+++ b/styles/pages/home.module.scss
@@ -1,8 +1,14 @@
 @import '../lib/theme.scss';
+
 $component_margin: 200px;
+$component_margin_mobile: 150px;
 
 .container {
   @extend %page_container;
+
+  @include breakpoint(mobile) {
+    flex-direction: column-reverse;
+  }
 }
 
 .more_btn {
@@ -14,6 +20,14 @@ $component_margin: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @include breakpoint(tablet_mobile) {
+    width: 100%
+  }
+
+  @include breakpoint(mobile) {
+    margin-top: $component_margin_mobile;
+  }
 
   & > h1 {
     @extend %title_style;
@@ -31,6 +45,15 @@ $component_margin: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @include breakpoint(tablet_mobile) {
+    width: 100%;
+  }
+
+  
+  @include breakpoint(mobile) {
+    margin-top: 0;
+  }
 
   & > h1 {
     @extend %title_style;
