--- a/styles/pages/templatesAbout.module.scss
+++ b/styles/pages/templatesAbout.module.scss
@@ -20,6 +20,10 @@ $component_margin: 150px;
         flex-direction: column;
         align-items: flex-start;
 
+        @include breakpoint(tablet_mobile) {
+            width: 100%;
+        }
+
         & > h3 {
             margin-bottom: 10px;
         }
@@ -32,10 +36,18 @@ $component_margin: 150px;
 
 .template_structure, .web_stack {
     align-self: flex-start;
+
+    @include breakpoint(smallScreen) {
+        align-self: auto;
+    }
 }
 
 .basic_features {
     align-self: flex-end;
+
+    @include breakpoint(smallScreen) {
+        align-self: auto;
+    }
 }
 
 .equation {
@@ -43,10 +55,14 @@ $component_margin: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
+    margin: 50px 0;
 
     & > img {
         width: 150px;
         margin: 0 25px;
+
+        @include breakpoint(mobile) {
+            width: 70px;
+        }
     }
 }
