--- a/styles/pages/home.module.scss
+++ b/styles/pages/home.module.scss
@@ -3,12 +3,25 @@
 $component_margin: 200px;
 $component_margin_mobile: 150px;
 
+.list {
+  margin: 50px 0;
+  padding-left: 50px;
+  & > li {
+    list-style-type: disc;
+  }
+}
+
 .container {
   @extend %page_container;
+}
 
-  @include breakpoint(mobile) {
-    flex-direction: column-reverse;
-  }
+.title {
+  @extend %title_style;
+}
+
+.subtitle {
+  @extend %title_style;
+  font-size: $xlg_font;
 }
 
 .more_btn {
@@ -25,12 +38,8 @@ $component_margin_mobile: 150px;
     width: 100%
   }
 
-  @include breakpoint(mobile) {
-    margin-top: $component_margin_mobile;
-  }
-
   & > h1 {
-    @extend %title_style;
+    margin-bottom: 50px;
   }
 
   & > p {
@@ -39,29 +48,91 @@ $component_margin_mobile: 150px;
   }
 }
 
-.slideshow_container {
-  width: 1025px;
+.efficiency {
   margin-top: $component_margin;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 1025px;
 
   @include breakpoint(tablet_mobile) {
-    width: 100%;
-  }
-
-  
-  @include breakpoint(mobile) {
-    margin-top: 0;
-  }
-
-  & > h1 {
-    @extend %title_style;
-    margin-top: 100px;
+      width: 100%
   }
 
   & > p {
-    margin-top: 50px;
-    line-height: 1.5em;
+      margin-top: 50px;
   }
+}
+
+.carousel_container {
+    position: relative;
+    width: 31vw;
+    margin: 100px auto 500px auto;
+    perspective: 180vw;
+  }
+  
+.carousel {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d; 
+    animation: rotate360 30s infinite forwards linear;
+}
+.carousel_face { 
+    position: absolute;
+    width: 30vw;
+    top: 0.4vw;
+    left: 0.5vw;
+    right: 0.5vw;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+
+& > div {
+    position: relative;
+    width: 100%;
+    height: 17vw;
+}
+
+& > .windows_top, & > .windows_bottom {
+    height: 1vw;
+    background-color: $secondary_color;
+}
+
+& > .windows_top {
+    border-top-right-radius: 0.5vw;
+    border-top-left-radius: 0.5vw;
+    display: flex;
+    align-items: center;
+
+    & > div {
+        border-radius: 50%;
+        background-color: #fff;
+        margin-left: 0.5vw;
+        width: 0.3vw;
+        height: 0.3vw;
+    }
+}
+
+& > .windows_bottom {
+    border-bottom-left-radius: 0.5vw;
+    border-bottom-right-radius: 0.5vw;
+}
+}
+
+.carousel_face:nth-child(1) {
+transform: rotateY(0deg) translateZ(25vw); }
+.carousel_face:nth-child(2) { 
+    transform: rotateY( 72deg) translateZ(25vw); }
+.carousel_face:nth-child(3) {
+transform: rotateY( 144deg) translateZ(25vw); }
+.carousel_face:nth-child(4) {
+transform: rotateY(216deg) translateZ(25vw); }
+.carousel_face:nth-child(5) { 
+transform: rotateY(288deg) translateZ(25vw); }
+
+@keyframes rotate360 {
+from {
+    transform: rotateY(0deg);
+}
+to {
+    transform: rotateY(-360deg);
+}
 }
