--- a/styles/pages/about.module.scss
+++ b/styles/pages/about.module.scss
@@ -48,7 +48,11 @@ $component_margin: 200px;
     }
 
     & > p {
-        margin-top: 50px;
+        margin: 50px 0;
+    }
+
+    & > h4 {
+        line-height: 1.5em;
     }
 }
 
