--- a/styles/lib/extension.scss
+++ b/styles/lib/extension.scss
@@ -14,7 +14,7 @@
 }
 
 %title_style {
-  color: $secondary_color;
+  color: $font_color;
   font-family: 'BebasNeue';
   font-size: $huge_font;
   font-weight: lighter;
