--- a/components/styles/card.module.scss
+++ b/components/styles/card.module.scss
@@ -1,5 +1,14 @@
 @import '../../styles/lib/theme.scss';
 
+.title {
+    @extend %title_style;
+    color: $primary_color;
+    
+    @include breakpoint(tablet_mobile) {
+        font-size: $lg_font;
+    }
+}
+
 .card {
     position: relative;
     display: flex;
@@ -7,30 +16,31 @@
     justify-content: center;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     border-radius: 10px;
+    width: 25vw;
 
     @include breakpoint(tablet_mobile) {
-        border-radius: 1.3vw;
+        width: 70vw;
+        border-radius: 10vw;
     }
 
     &:hover .window_top, &:hover .window_bottom {
-        transition: 1s;
-        background-color: $primary_color;
+        transition: 0.3s;
+        background-color: $window_hover_color;
     }
 
     &:hover .info_container {
-        transition: 0.5s;
+        transition: 0.3s;
         opacity: 1;
     }
 }
 
 .img_container {
     position: relative;
-    width: 25vw;
+    width: 100%;
     height: 14.5vw;
 
     @include breakpoint(tablet_mobile) {
-        width: 30vw;
-        height: 60vw;
+        height: 143vw;
     }
 }
 
@@ -46,40 +56,51 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.44);
+    background-color: rgba(255, 255, 255, 0.458);
     backdrop-filter: blur(10px);
 
-    & > h2 {
-        margin-bottom: 20px;
-        @include breakpoint(tablet_mobile) {
-            font-size: inherit;
-        }
+    @include breakpoint(tablet_mobile) {
+        border-radius: 10vw;
     }
 }
 
+.explore_btn {
+    margin-top: 10px;
+    border: 1px solid $font_color;
+    border-radius: 5px;
+    padding: 5px;
+
+    &:hover {
+        transition: 0.3s;
+        background-color: $primary_color;
+        color: white;
+        border-color: $primary_color;
+    }
+}
 
 .window_top {
-    width: 25vw;
-    height: 0.8vw;
-    background-color: $secondary_color;
+    width: 100%;
+    height: 0.7vw;
+    background-color: $window_color;
     border-top-left-radius: 0.5vw;
     border-top-right-radius: 0.5vw;
     display: flex;
     align-items: center;
 
     @include breakpoint(tablet_mobile) {
-        width: 30vw;
-        height: 2vw;
-        border-top-left-radius: 1.3vw;
-        border-top-right-radius: 1.3vw;
+        display: none;
     }
 
     & > div {
         border-radius: 50%;
         width: 0.3vw;
         height: 0.3vw;
-        background-color: #fff;
+        background-color: $window_button_color;
         margin-left: 0.5vw;
+        
+        &:nth-child(1) { background-color: #FF625B; }
+        &:nth-child(2) { background-color: #FFBC44; }
+        &:nth-child(3) { background-color: #32C845; }
 
         @include breakpoint(tablet_mobile) {
             display: none;
@@ -88,9 +109,9 @@
 }
 
 .window_bottom {
-    width: 25vw;
-    height: 0.8vw;
-    background-color: $secondary_color;
+    width: 100%;
+    height: 0.7vw;
+    background-color: $window_color;
     border-bottom-left-radius: 0.5vw;
     border-bottom-right-radius: 0.5vw;
     display: flex;
@@ -98,21 +119,6 @@
     justify-content: center;
 
     @include breakpoint(tablet_mobile) {
-        width: 30vw;
-        height: 2vw;
-        border-bottom-left-radius: 1.3vw;
-        border-bottom-right-radius: 1.3vw;
-    }
-
-    & > div {
         display: none;
-        background-color: #fff;
-        width: 1vw;
-        height: 1vw;
-        border-radius: 50%;
-
-        @include breakpoint(tablet_mobile) {
-            display: block;
-        }
     }
 }
