--- a/styles/pages/home.module.scss
+++ b/styles/pages/home.module.scss
@@ -42,10 +42,21 @@ $component_margin_mobile: 150px;
     width: 100%
   }
 
+  & > h1 {
+    margin-bottom: 50px;
+  }
+
   & > p {
     margin: 50px 0;
+    width: 70%;
+    text-align: center;
   }
 }
+
+ .button_container {
+    display: flex;
+    gap: 20px;
+  }
 
 .intro_template {
   display: flex;
@@ -74,7 +85,7 @@ $component_margin_mobile: 150px;
     position: relative;
     width: 31vw;
     margin: 5vw auto 28vw auto;
-    perspective: 180vw;
+    perspective: 150vw;
 
     @include breakpoint(mobile) {
       margin-bottom: 90vw;
@@ -102,91 +113,99 @@ $component_margin_mobile: 150px;
     background-size: cover;
     display: flex;
     flex-direction: column;
+}
 
-& > .img_container {
+.carousel_img_container {
     position: relative;
     width: 100%;
     height: 17vw;
-
     
     @include breakpoint(mobile) {
       height: 60vw;
     }
 }
 
-& > .windows_top, & > .windows_bottom {
-    height: 0.7vw;
-    background-color: $secondary_color;
 
-    @include breakpoint(mobile) {
-      height: 2vw;
-    }
+.windows_top, .windows_bottom {
+  height: 0.7vw;
+  background-color: $window_color;
 }
 
-& > .windows_top {
+.windows_top {
     border-top-right-radius: 0.5vw;
     border-top-left-radius: 0.5vw;
     display: flex;
     align-items: center;
-
     @include breakpoint(mobile) {
-      border-top-right-radius: 1vw;
-      border-top-left-radius: 1vw;
+      display: none;
     }
 
     & > div {
         border-radius: 50%;
-        background-color: #fff;
+        background-color: $window_button_color;
         margin-left: 0.5vw;
         width: 0.3vw;
         height: 0.3vw;
 
-        @include breakpoint(mobile) {
-          display: none;
-        }
+        
+        &:nth-child(1) { background-color: #FF625B; }
+        &:nth-child(2) { background-color: #FFBC44; }
+        &:nth-child(3) { background-color: #32C845; }
     }
 }
 
-& > .windows_bottom {
+.windows_bottom {
     border-bottom-left-radius: 0.5vw;
     border-bottom-right-radius: 0.5vw;
     display: flex;
     justify-content: center;
     align-items: center;
-
-    & > div {
-      background-color: #fff;
-      width: 1vw;
-      height: 1vw;
-      border-radius: 50%;
-      display: none;
-
-      @include breakpoint(mobile) {
-        display: block;
-      }
-    }
-
     @include breakpoint(mobile) {
-      border-bottom-left-radius: 1vw;
-      border-bottom-right-radius: 1vw;
+      display: none;
     }
 }
+
+.iphone_frame {
+  position: absolute;
+  top: 0;
+  left: -7vw;
+  width: 45vw;
 }
 
 .carousel_face:nth-child(1) {
   transform: rotateY(0deg) translateZ(25vw); 
+  @include breakpoint(mobile) {
+      transform: rotateY(0deg) translateZ(30vw); 
+
+  }
 }
 .carousel_face:nth-child(2) { 
   transform: rotateY( 72deg) translateZ(25vw); 
+  @include breakpoint(mobile) {
+      transform: rotateY(72deg) translateZ(30vw); 
+
+  }
 }
 .carousel_face:nth-child(3) {
   transform: rotateY( 144deg) translateZ(25vw); 
+  @include breakpoint(mobile) {
+      transform: rotateY(144deg) translateZ(30vw); 
+
+  }
 }
 .carousel_face:nth-child(4) {
   transform: rotateY(216deg) translateZ(25vw); 
+  @include breakpoint(mobile) {
+      transform: rotateY(216deg) translateZ(30vw); 
+
+  }
 }
 .carousel_face:nth-child(5) { 
   transform: rotateY(288deg) translateZ(25vw); 
+  @include breakpoint(mobile) {
+      transform: rotateY(288deg) translateZ(30vw); 
+
+  }
 }
 
 @keyframes rotate360 {
