--- a/styles/pages/about.module.scss
+++ b/styles/pages/about.module.scss
@@ -56,115 +56,7 @@ $component_margin: 200px;
     }
 }
 
-.templates_comparison_container {
-    display: flex;
-    justify-content: space-between;
-    gap: 25px;
-
-    @include breakpoint (tablet_mobile) {
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-    }
-
-    .img_container {
-        position: relative;
-        width: 100%; 
-        height: 260px;
-
-        @include breakpoint(tablet_mobile) {
-            height: 45vw;
-        }
-    }
-
-    .template_desktop {
-        cursor: pointer;
-        margin-top: 50px;
-        display: flex;
-        flex-direction: column;
-        box-shadow: 0 7px 14px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-        border-radius: 15px;
-    
-        &:hover > .desktop_top, &:hover > .desktop_bottom {
-            background-color: $primary_color;
-        }
-    }
-    
-    .template_desktop {
-        width: 450px;
-
-        @include breakpoint(tablet_mobile) {
-            width: 80vw;
-        }
-    
-    }
-    
-    .desktop_top, .desktop_bottom {
-        background-color: $secondary_color;
-        width: 100%;
-        height: 15px;
-
-        @include breakpoint(tablet_mobile) {
-            height: 2vw;
-        }
-    }
-    
-    .desktop_top {
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-    }
-    
-    .desktop_bottom {
-        border-bottom-left-radius: 5px;
-        border-bottom-right-radius: 5px;
-    }
-    
-    .desktop_top {
-        display: flex;
-        align-items: center;
-        & > div {
-            border-radius: 50%;
-            width: 5px;
-            height: 5px;
-            background-color: #fff;
-            margin-left: 5px;
-
-            @include breakpoint(tablet_mobile) {
-                margin-left: 1vw;
-                width: 1vw;
-                height: 1vw;
-            }
-        }
-    }
-}
-
-
-
-.custom_design, .scalable_design, .and_more {
-    width: 1025px;
-    margin-top: $component_margin;
-
-    @include breakpoint(tablet_mobile) {
-        width: 100%
-    }
-
-    & > p {
-        margin-top: 50px;
-    }
-}
-
-.custom_design, .and_more {
-    align-self: flex-start;
-
-    @include breakpoint(smallScreen) {
-        align-self: auto;
-    }
-}
-
-.scalable_design {
-    align-self: flex-end;
-
-      @include breakpoint(smallScreen) {
-        align-self: auto;
-    }
+.about_templates {
+    margin-top: 250px;
+    min-height: 100vh;    
 }
