--- a/components/styles/card.module.scss
+++ b/components/styles/card.module.scss
@@ -3,9 +3,14 @@
 .title {
     @extend %title_style;
     color: $primary_color;
+    font-size: 2.5vw;
     
-    @include breakpoint(tablet_mobile) {
-        font-size: $lg_font;
+    @include breakpoint(tablet) {
+        font-size: 4vw;
+    }
+
+    @include breakpoint(mobile) {
+        font-size: 8vw;
     }
 }
 
@@ -18,7 +23,11 @@
     border-radius: 10px;
     width: 25vw;
 
-    @include breakpoint(tablet_mobile) {
+    @include breakpoint(tablet) {
+        width: 35vw;
+        border-radius: 5vw;
+    }
+    @include breakpoint(mobile) {
         width: 70vw;
         border-radius: 10vw;
     }
@@ -39,7 +48,11 @@
     width: 100%;
     height: 14.5vw;
 
-    @include breakpoint(tablet_mobile) {
+    @include breakpoint(tablet) {
+        height: 71.5vw;
+    }
+
+    @include breakpoint(mobile) {
         height: 143vw;
     }
 }
@@ -59,7 +72,10 @@
     background-color: rgba(255, 255, 255, 0.458);
     backdrop-filter: blur(10px);
 
-    @include breakpoint(tablet_mobile) {
+    @include breakpoint(tablet) {
+        border-radius: 5vw;
+    }
+    @include breakpoint(mobile) {
         border-radius: 10vw;
     }
 }
@@ -95,7 +111,6 @@
         border-radius: 50%;
         width: 0.3vw;
         height: 0.3vw;
-        background-color: $window_button_color;
         margin-left: 0.5vw;
         
         &:nth-child(1) { background-color: #FF625B; }
