--- a/styles/lib/variables.scss
+++ b/styles/lib/variables.scss
@@ -1,11 +1,10 @@
-$font_color: #484848;
-$primary_color: #2D68C4;
-$secondary_color: rgb(31, 9, 154);
+$font_color: #3a3a3a;
+$primary_color: #5881f0;
+$secondary_color: #2c3dff;
 $background_color: rgb(255, 255, 255);
 
 // Template color
 $window_color: #ececec;
-$window_button_color: #fff;
 $window_hover_color: $primary_color;
 
 $sm_font: 12px;
