--- a/styles/pages/about.module.scss
+++ b/styles/pages/about.module.scss
@@ -16,7 +16,7 @@ $component_margin: 200px;
 }
 
 .main {
-    width: 100%;
+    // width: 1025px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,7 +56,31 @@ $component_margin: 200px;
     }
 }
 
-.about_templates {
-    margin-top: 250px;
-    min-height: 100vh;    
+.work_process {
+    margin-top: $component_margin;
+    display: flex;
+    flex-direction: column;
+    width: 1025px;
+}
+
+.card {
+    margin-top: 100px;
+    & > h4 {
+        font-size: $xlg_font;
+    }
+    & > p {
+        margin-top: 50px;
+        width: 70%;
+    }
+}
+
+.and_more {
+    margin-top: $component_margin;
+    display: flex;
+    flex-direction: column;
+    width: 1025px;
+
+    & > p {
+        margin-top: 50px;
+    }
 }
