updated template, home page

--- a/styles/pages/[template].module.scss
+++ b/styles/pages/[template].module.scss
@@ -15,27 +15,16 @@
     cursor: pointer;
     position: absolute;
     background-color: $primary_color;
-    border-radius: 50%;
-    padding: 10px;
     box-shadow: 0 7px 14px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    bottom: 50px;
-    left: 50px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: rgba(240, 240, 240, 0.499);
+    backdrop-filter: blur(20px);
+    top: 55%;
+    left: 0;
     width: 50px;
     height: 50px;
-
-    
-    @include breakpoint(mobile) {
-        padding: 7px;
-        width: 40px;
-        height: 40px;
-        left: 25px;
-        bottom: 25px;
-    }
-
-    &:hover {
-        transition: 0.3s;
-        transform: scale(1.05);
-    }
+    padding: 12.5px;
 }
 
 .info {
@@ -57,8 +46,10 @@
     @include breakpoint(mobile) {
         width: 80%;
         height: auto;
-        left: 25px;
-        bottom: 25px;
+        right: 25px;
+        left: auto;
+        bottom: auto;
+        top: 25px;
     }
 
     & > p {
@@ -97,6 +88,7 @@
 }
 
 .template_container {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -112,30 +104,13 @@
     height: 100%;
 }
 
-.mobile_top, .mobile_bottom {
-    width: 450px;
-    height: 25px;
-    background-color: #fff;
-}
-
-.mobile_top { 
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
- }
-
-.mobile_bottom {
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    & > div {
-        width: 10px;
-        height: 10px;
-        background-color: $primary_color;
-        border-radius: 50%;
-    }
+.mobile_frame {
+    position: absolute;
+    z-index: -1;
+    top: -96px;
+    left: -79px;
+    width: 509px;
+    height: 822px;
 }
 
 .alert {
