--- a/styles/pages/home.module.scss
+++ b/styles/pages/home.module.scss
@@ -262,7 +262,8 @@ to {
   align-items: center;
 
   @include breakpoint(mobile) {
-    margin-top: $component_margin_mobile;;
+    margin-top: $component_margin_mobile;
+    width: 100%;
   }
   
   & > p {
@@ -273,6 +274,54 @@ to {
       width: 100%;
     }
   }
+}
 
+.card_container {
+  width: 1025px;
+  display: flex;
+  align-items: center;
+  gap: 25px;
+  margin-bottom: 50px;
 
+  @include breakpoint(tablet_mobile) {
+    width: 100%;
+  }
+  @include breakpoint(tablet) {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    justify-content: center;
+  }
+
+  @include breakpoint(mobile) {
+    flex-direction: column;
+  }
+
+  & > h2 { 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:  250px;
+    height: 300px;
+  }
+}
+
+.card {
+  box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+  border-radius: 15px;
+  width: 250px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 25px;
+
+  & > img {
+    width: 50px;
+    height: 50px;
+  }
+
+  & > p {
+    margin-top: 50px;
+  }
 }
